--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
-    "redux": "4.0"
+    "redux": "4.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
