--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.2.5",
+    "axios": "^0.19.2",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "redux": "4.0",
