--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.19.2",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
+    "moment": "^2.24.0",
     "redux": "4.0",
     "redux-devtools-extension": "^2.13.8",
     "reselect": "^4.0.0"
